prover-ray/zkcdriver/testdata/synced/invalid/printf_01.zkc
//error:9:35-38:too many arguments
pub input data(address:u16) -> (byte:u32)

// prove that two numbers add up to a third.
fn main() {
  var lhs:u32 = data[0]
  var rhs:u32 = data[1]
  //
  printf "hello world %d\n", lhs, rhs
}
